force-app/main/default/objects/FieloPLT__Member__c/fields/AddressCountry__c.field-meta.xml
<CustomField>
    <fullName>AddressCountry__c</fullName>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>