force-app/main/default/objects/FieloPLT__Member__c/fields/AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>AddressLine1__c</fullName>
    <label>Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>