force-app/main/default/objects/FieloPLT__Member__c/fields/AddressState__c.field-meta.xml
<CustomField>
    <fullName>AddressState__c</fullName>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>