force-app/main/default/objects/FieloPLT__Member__c/fields/Cash_Points__c.field-meta.xml
<CustomField>
    <fullName>Cash_Points__c</fullName>
    <description>Number of Cash Points Member can have and redeem</description>
    <inlineHelpText>Number of Cash Points Member can have and redeem</inlineHelpText>
    <label>Cash Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>