force-app/main/default/objects/FieloPLT__Member__c/fields/F_LevelFormula__c.field-meta.xml
<CustomField>
    <fullName>F_LevelFormula__c</fullName>
    <formula>FieloPLT__CurrentLevelMember__r.FieloPLT__Level__r.Name</formula>
    <label>Level Formula</label>
    <type>Text</type>
</CustomField>