force-app/main/default/objects/FieloPLT__Member__c/fields/Growth_Point__c.field-meta.xml
<CustomField>
    <fullName>Growth_Point__c</fullName>
    <label>Growth Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>