force-app/main/default/objects/FieloPLT__Member__c/fields/Member_type__c.field-meta.xml
<CustomField>
    <fullName>Member_type__c</fullName>
    <description>Member type</description>
    <inlineHelpText>Member type</inlineHelpText>
    <label>Member type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DIstributor</fullName>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>